fixed gradient of wallpaper on smaller screen

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -16,11 +16,31 @@ h3 {
 .divider {
 	background-color: black;
 }
+.topnav {
+	width: 100%;
+}
 .nav li a {
-	color: white;
-	font-size: 22px;
+	color: black;
+	
+}
+.navbar-home {
+	float: left;
+	height: 50px;
+	padding: 15px 15px;
+	line-height: 20px;
+	font-size: 2em;
+	border: 1px solid red;
 }
 
+
+button .icon-bar {
+	background-color: #888;
+}
+@media (max-width: 400px) {
+	.name {
+		color: black;
+	}
+}
 .wallpaper {
 	background-size: cover;	
 	background-image: url("../images/intro-photo-1.jpg");
@@ -29,25 +49,24 @@ h3 {
 	background-position: center;
 	text-align: center;
 	
-	
 }
 
 @media (max-width: 400px) {
 	.wallpaper {
-		border: 1px solid green;
-		background-position: right 0px bottom 0px;
+		background-position: right 30% bottom 0;
 	}
 }
 /* Source: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Images/Using_CSS_gradients*/
+
 @media (max-width: 400px) {
 	.gradient {
-		/* The old syntax, deprecated and prefixed, for old browsers */
-		background-image: -moz-linear-gradient(left, hsla(0, 0%, 100%, 0.4), #fcc600 50%;  #fcc600);
-		background-image: -webkit-linear-gradient(left, hsla(0, 0%, 100%, 0.4), #fcc600 50%, #fcc600);
+		The old syntax, deprecated and prefixed, for old browsers
+		background-image: -moz-linear-gradient(hsla(0, 0%, 100%, 0.3),  #fcc600), url("../images/intro-photo-1.jpg");
+		background-image: -webkit-linear-gradient(hsla(0, 0%, 100%, 0.3), #fcc600), url("../images/intro-photo-1.jpg");
 
-		/* The new syntax needed by standard-compliant browsers (Opera 12.1,
-		 IE 10, Firefox 16, Chrome 26, Safari 6.1), without prefix */
-		background-image: linear-gradient(left, hsla(0, 0%, 100%, 0.4),#fcc600 50%,  #fcc600);
+		The new syntax needed by standard-compliant browsers (Opera 12.1,
+		 IE 10, Firefox 16, Chrome 26, Safari 6.1), without prefix
+		background-image: linear-gradient(hsla(0, 0%, 100%, 0.3), #fcc600), url("../images/intro-photo-1.jpg");
 	}
 	.gradient {
 		width:100%;
@@ -64,8 +83,8 @@ h3 {
 
 
 .welcome {
-	padding-top: 45%;
-	padding-bottom:10%;
+	padding-top: 30%;
+	padding-bottom:30%;
 	align-items: center;
 	justify-content: center;
 	font-family: Arial;
@@ -80,15 +99,15 @@ h3 {
 }
 
 .welcome h1 {
-	font-size: 5em;
+	font-size: 6em;
 }
 
 .welcome p {
-	font-size: 2em;
+	font-size: 3em;
 }
 
 .welcome h2 {
-	font-size: 3em;
+	font-size: 4em;
 }
 
 .btn {
